Fixed console white spaces

--- a/styles/tested.less
+++ b/styles/tested.less
@@ -130,6 +130,7 @@ to {color: @text-color-info;}
 	.tested-console {
         display: none;
 
+
         cursor: text;
         margin: 10px 10px 150px 10px;
 
@@ -137,7 +138,7 @@ to {color: @text-color-info;}
             font-family: monospace;
             font-size: 12px;
             line-height: 1.3em;
-            white-space: nowrap;
+            white-space: pre;
             -webkit-user-select: text;
         }
 
